sumo/tests/duarouter/alternatives/style2_input/errors/vehicle/vehicle_empty_arrivalpos/errors.duarouter
Error: Attribute 'arrivalpos' in definition of a vehicle is empty.
Error: Invalid arrivalpos definition for vehicle '1'
Quitting (on error).
